# FFmpegDemo

app/: build.gradle
app/src/androidTest/java/com/bzf/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  logutils.h  native-lib.cpp
app/src/main/cpp/avdecoder/: accompany_decoder.cpp  accompany_decoder.h
app/src/main/cpp/example/: avio_reading.cpp  avio_reading.h  decode_audio.cpp  decode_audio.h  decode_video.cpp  decode_video.h  demuxing_decoding.cpp  demuxing_decoding.h  encode_audio.cpp  encode_audio.h  encode_video.cpp  encode_video.h
app/src/main/java/com/bzf/ffmpegdemo/: GlideEngine.kt  ImageLoaderUtils.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/bzf/ffmpegdemo/: ExampleUnitTest.kt  MainActivityTest.kt
gradle/wrapper/: gradle-wrapper.properties
